buildscript {
	repositories {
		mavenCentral()
        jcenter()
	}
    dependencies {
        classpath("org.liquibase:liquibase-gradle-plugin:1.1.1")
        classpath("org.postgresql:postgresql:9.4-1200-jdbc41")
        classpath 'com.github.jengelman.gradle.plugins:shadow:1.2.2'
	}
}

apply plugin: 'java'
apply plugin: 'com.github.johnrengelman.shadow'
apply plugin:'org.liquibase.gradle'

group = 'pl.devcrowd.chicken'
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
	compile group: 'io.dropwizard', name: 'dropwizard-core', version: '0.9.1'
	compile group: 'io.dropwizard', name: 'dropwizard-jdbi', version: '0.9.1'
	compile group: 'io.dropwizard.metrics', name: 'metrics-servlets', version: '3.1.2'
	compile group: 'io.dropwizard', name: 'dropwizard-auth', version: '0.9.1'
	compile group: 'org.postgresql', name: 'postgresql', version: '9.4-1205-jdbc42'
	compile group: 'org.apache.commons', name: 'commons-io', version: '1.3.2'
	compile group: 'org.apache.commons', name: 'commons-email', version: '1.4'
	
    testCompile group: 'junit', name: 'junit', version: '4.+'
}

liquibase {
	activities {
	  main {
		changeLogFile 'db/changelog.xml'
		url "jdbc:postgresql://" + System.getenv().getOrDefault("OPENSHIFT_POSTGRESQL_DB_HOST", "localhost") + ":5432/" + System.getenv().getOrDefault("PGDATABASE", "test")
		username System.getenv().getOrDefault("OPENSHIFT_POSTGRESQL_DB_USERNAME", "test")
		password System.getenv().getOrDefault("OPENSHIFT_POSTGRESQL_DB_PASSWORD", "test")
	  }
	}
  }

task wrapper(type: Wrapper) {
	gradleVersion = '2.6'
}

jar {
    baseName = 'super-chicken'
    manifest {
        attributes 'Main-Class': 'pl.devcrowd.chicken.SuperChicken'
    }
} 

shadowJar {
    baseName = 'super-chicken'
    version = ''
    classifier = 'all'
    mergeServiceFiles()
}
